--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -45,6 +45,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-burger-menu": "^2.8.7"
+    "@types/react-burger-menu": "^2.8.7",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11"
   }
 }
