--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,10 +14,16 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "bootstrap": "^5.3.3",
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
+    "react-bootstrap": "^2.10.4",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-multi-carousel": "^2.8.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
     "typescript": "^4.9.5",
