--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@emotion/use-insertion-effect-with-fallbacks": "^1.1.0",
     "@mui/material": "^6.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.5.4",
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
