--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
     "typescript": "^4.9.5",
